--- a/angular.json
+++ b/angular.json
@@ -120,8 +120,13 @@
               "devServerTarget": "kavinograph:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "kavinograph"
 }
